--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "image-search",
   "version": "1.0.0",
   "description": "Image search application",
+  "engines": {
+    "node": "6.9.2"
+  },
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +22,7 @@
   "homepage": "https://github.com/Renestl/image-search#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-sanitizer": "^1.0.2",
     "method-override": "^2.3.7",
